HISTORY
=======

History of changes to PHC (name of developer listed in brackets)::

    PloneHelpCenter 4.0a2 (unreleased)

    - Modify workflow definitions to disallow Anonymous users to see
      content inside hidden Help Centers.
      Fixes http://plone.org/products/plonehelpcenter/issues/118.
      [dukebody]

    - Remove the "Properties" tab for content-types, that was
      duplicating the Metadata schemata already present in the edit
      view in Plone 3.
      Fixes http://plone.org/products/plonehelpcenter/issues/119.
      [dukebody]

    - Make mail sending code compatible with Plone 3. PHC 4 is now
      compatible with both Plone 3 and 4.
      [dukebody]


    PloneHelpCenter 4.0a1 (2010-12-07)

    - Use lxml to turn image relative links into absolute for the
      one-page version of manuals. This introduces a new install
      dependency on lxml.
      Fixes http://plone.org/products/plonehelpcenter/issues/136.
      [dukebody]

    - Include numbering in the section title.
      Fixes http://plone.org/products/plonehelpcenter/issues/137.
      [dukebody]

    - Rename type titles: "Page" to "Tutorial Page" and "Link" to
      "Help Center Link".
      Fixes http://plone.org/products/plonehelpcenter/issues/140.
      [dukebody]

    - Made it possible to query contentIds via XML-RPC for 
      collective.developermanual uploads [miohtama]

    - Use the aq_parent function instead of the attribute to avoid
      AttributeErrors when not using an acquisition wrapper (newer
      Zope versions).
      [dukebody]

    - Fix next/previous custom adapter to visit the same items as appear in
      the navigation dropdown. Also make sure this adapter is used for legacy
      ReferenceManuals. This fixes
      http://plone.org/products/plonehelpcenter/issues/152/.
      [dukebody, davisagli]

    - Don't fail when trying to acquire getCurrentVersions if not in
      a container that includes currentVersions in its schema. [davisagli]
